--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -21,7 +21,7 @@
 </head>
 <body class="container">
 	<div class="nomePrograma">
-		<a href="/tiDaniel"><h1>SISTEMA DANIEL TI</h1></a>
+		<a href="/tiDaniel"><h1>SISTEMA TI DANIEL</h1></a>
 	</div>
 	<a href="/tiDaniel"><h5><i class="fas fa-home"></i> Home</h5></a>
 	<ng-view></ng-view>
