--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -18,6 +18,7 @@
 <script src="angularjs/configs/routes.js"></script>
 <script src="angularjs/configs/uiMask.js"></script>
 <script src="angularjs/configs/dirPagination.js"></script>
+<script src="angularjs/diretivas/rgMessage.js"></script>
 </head>
 <body class="container">
 	<div class="nomePrograma">
